--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/forum
+spring.datasource.url=jdbc:postgresql://localhost:9999/forum
 spring.datasource.username=postgres
 spring.datasource.password=paxutobe
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.servlet.context-path=/api
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.flyway.baseline-on-migrate=true
-
-spring.jpa.show-sql=true
