--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:9999/forum
-spring.datasource.username=postgres
-spring.datasource.password=paxutobe
+spring.datasource.url=jdbc:tc:postgresql:15.1:///integration-tests-db
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.jpa.hibernate.ddl-auto=create
 
 server.servlet.context-path=/api
 
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=false
