--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.flyway.baseline-on-migrate=true
 
 spring.jpa.show-sql=true
+
+springfox.documentation.swagger-ui.enabled=true
